Update branches for push and pull_request actions in tests.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,10 +3,10 @@ name: Run .Net Tests
 on:
   push:
     branches:
-      - '*'  
+      - 'main'  
   pull_request:
     branches:
-      - '*'  
+      - 'main'  
 
 jobs:
   test:
