--- a/MyList.Test/MyList.Test.csproj
+++ b/MyList.Test/MyList.Test.csproj
@@ -27,4 +27,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MyList.App\MyList.App.csproj" />
+    </ItemGroup>
+
 </Project>
